[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-env-file"
version = "0.1.1"
description = ".env file parser with interpolation and multi-file support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["env", "dotenv", "environment", "configuration", "interpolation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-env-file#readme"
Repository = "https://github.com/philiprehberger/py-env-file"
Issues = "https://github.com/philiprehberger/py-env-file/issues"
Changelog = "https://github.com/philiprehberger/py-env-file/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_env_file"]
